start project page

--- a/main.html
+++ b/main.html
@@ -155,7 +155,7 @@
                     <div class="layer">
                         <h5>Tiki-Taka-Toe</h5>
                         <p>description du projet : Pro verververver gerbrtbev dsgersg fqdeger jhdsdvcnqs f acdsgndsv beregsqdhsqnfsv,dnbvegzcsdgfz</p>
-                        <a href="#"><i class="bx bx-plus-circle"></i></a>
+                        <a href="projet.html"><i class="bx bx-plus-circle"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -215,7 +215,7 @@
         </div>
     </section>
     <footer>
-        <p>Développé par Noé Lechat © 2024</p>
+        <p>&copy; 2023 Mon Portfolio. Tous droits réservés.</p>
     </footer>
     <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
     <div id="alert-container"></div>
