COMPLETE PROJECT PART

--- a/betterDJ.html
+++ b/betterDJ.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Détails du Projet</title>
+    <title>Projet BetterDJ</title>
     <link rel="stylesheet" href="project.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -16,27 +16,27 @@
         </a> 
         </div>
         <div class="project-details-title">
-            <h1><span>TIKI</span>-TAKA-TOE</h1>
-            <p>Mini-jeux de football en ligne</p>
+            <h1><span>BETTER</span> DJ</h1>
+            <p>Site vitrine de l'application BetterDJ</p>
         </div>
         <div class="project-technos">
             <div class="year">
-                <h2>Année</h2>
-                <p>2020</p>
+                <h2>Date</h2>
+                <p>Octobre 2023 - Mai 2024</p>
             </div>
             <div class="technos">
                 <h2>Technologies utilisés</h2>
                 <div class="logos">
-                    <i class='bx bxl-javascript' id="techno" style='color:#e9d44d'></i>  
-                    <i class='bx bxl-html5' id="techno" style='color:#dd4b24'  ></i>
-                    <i class='bx bxl-css3' id="techno" style='color:#147bbc'  ></i>
+                    <i class='bx bxl-angular' style='color:#d6002f' data-lang="ANGULAR"></i>  
+                    <i class='bx bxl-html5' id="techno" style='color:#dd4b24' data-lang="HTML"></i>
+                    <i class='bx bxl-css3' id="techno" style='color:#147bbc' data-lang="CSS"></i>
                 </div>
             </div>
             <div class="github-link">
-                <a href="https://github.com/lechatn/tiki-taka-toe">Lien Github</a>
+                <a href="https://github.com/lechatn/BetterDJ">Lien Github</a>
             </div>
         </div>
-        <img src="./images/tiki-taka-toe.jpg" class="home-photo" alt="">
+        <img src="./images/better_dj.png" class="home-photo" alt="">
     </section>
     <section class="project-presentation">
         <div class="project-target">
