--- a/main.html
+++ b/main.html
@@ -66,7 +66,9 @@
                         <i class='bx bxl-css3' id="techno" style='color:#147bbc'  ><p>CSS</p></i>
                         <i class='bx bxl-go-lang' id="techno" style='color:#00a9d2'  ><p>Golang</p></i>
                         <i class='bx bxl-java' id="techno" style='color:#0a74c2'  ><p>JAVA</p></i>
+                        <i class='bx bxl-angular' style='color:#d6002f'  ><p>Angular</p></i> 
                         <i class='bx bxl-typescript' id="techno" style='color:#2f74c0'  ><p>TypeScript</p></i>
+                        <i class='bx bxl-docker' style='color:#008de1'  ><p>Docker</p></i>
                         <i><p></p></i>
                     </section>
                 </div>
@@ -138,9 +140,9 @@
                             <i class='bx bx-arrow-back' style='color:#96d1d1' onclick="Refresh('5')" id="arrow" ></i>
                     </section>
                     <section class="back-card-logos">
-                        <i class='bx bx-brain' style='color:#96d1d1'  ><p>Adaptation</p></i>
-                        <i class='bx bx-group' style='color:#96d1d1'  ><p>Résolution de problèmes</p></i>
-                        <i class='bx bx-time five' style='color:#96d1d1'  ><p>Autodidacte</p></i>
+                        <i class='bx bx-sync' style='color:#96d1d1'><p>Adaptation</p></i>
+                        <i class='bx bx-bulb' style='color:#96d1d1'><p>Résolution de problèmes</p></i>
+                        <i class='bx bx-book-open' style='color:#96d1d1'><p>Autodidacte</p></i>
                     </section>
                 </div>
         </div>
@@ -151,37 +153,29 @@
             <h2>Mes <span>projets</span></h2>
             <div class="portfolio-content">
                 <div class="row">
-                    <img src="./images/tiki-taka-toe.jpg" alt="tiki-taka-toe">
+                    <img src="./images/forum.png" alt="forum">
                     <div class="layer">
-                        <h5>Tiki-Taka-Toe</h5>
-                        <p>description du projet : Pro verververver gerbrtbev dsgersg fqdeger jhdsdvcnqs f acdsgndsv beregsqdhsqnfsv,dnbvegzcsdgfz</p>
-                        <a href="projet.html"><i class="bx bx-plus-circle"></i></a>
+                        <h5>Forum</h5>
+                        <p>Forum de discussion en ligne</p>
+                        <a href="forum.html"><i class="bx bx-plus-circle"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <img src="./images/tiki-taka-toe.jpg" alt="tiki-taka-toe">
                     <div class="layer">
                         <h5>Tiki-Taka-Toe</h5>
-                        <p>description du projet : Pro verververver gerbrtbev dsgersg fqdeger jhdsdvcnqs f acdsgndsv beregsqdhsqnfsv,dnbvegzcsdgfz</p>
-                        <a href="#"><i class="bx bx-link-external"></i></a>
+                        <p>Site de mini-jeux de football</p>
+                        <a href="tiki-taka-toe.html"><i class="bx bx-plus-circle"></i></a>
                     </div>
                 </div>
                 <div class="row">
-                    <img src="./images/tiki-taka-toe.jpg" alt="tiki-taka-toe">
+                    <img src="./images/better_dj.png" alt="better-dj">
                     <div class="layer">
-                        <h5>Tiki-Taka-Toe</h5>
-                        <p>description du projet : Pro verververver gerbrtbev dsgersg fqdeger jhdsdvcnqs f acdsgndsv beregsqdhsqnfsv,dnbvegzcsdgfz</p>
-                        <a href="#"><i class="bx bx-link-external"></i></a>
+                        <h5>BetterDJ</h5>
+                        <p>Site vitrine de l'application BetterDJ</p>
+                        <a href="betterDJ.html"><i class="bx bx-plus-circle"></i></a>
                     </div>
                 </div>
-                <div class="row">
-                    <img src="./images/tiki-taka-toe.jpg" alt="tiki-taka-toe">
-                    <div class="layer">
-                        <h5>Tiki-Taka-Toe</h5>
-                        <p>description du projet : Pro verververver gerbrtbev dsgersg fqdeger jhdsdvcnqs f acdsgndsv beregsqdhsqnfsv,dnbvegzcsdgfz</p>
-                        <a href="#"><i class="bx bx-link-external"></i></a>
-                    </div>
-                </div>  
             </div>
         </div>
     </div>
