--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="./images/logoNL.png" type="image/png">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
 <body>
@@ -31,6 +32,7 @@
                 <a href="https://www.instagram.com/noe_lechat/" style="--i:8"><i class='bx bxl-instagram' ></i></a>
             </div>
         </div>
+        <img src="./images/logoNL.png" alt="logo">
     </section>
     <article id="about"></article>
     <section class="about"">
