add content for betterdj page

--- a/betterDJ.html
+++ b/betterDJ.html
@@ -41,21 +41,23 @@
     <section class="project-presentation">
         <div class="project-target">
             <h2><span>OBJECTIFS</span> DU PROJET</h2>
-            <p>Ce projet, réalisé en 2023, a été l'un de mes premiers exercices lors de mon apprentissage de React. L'objectif principal était d'améliorer mes compétences en développement front-end. Il s'agit d'un exercice proposé par le site web Frontend Mentor, qui offre une variété d'exercices avec des niveaux de difficulté et des thématiques diversifiés.
+            <p>BetterDJ est une application innovante qui révolutionne la manière de créer des playlists collaboratives. Elle offre aux utilisateurs une expérience musicale partagée et interactive, où chacun peut participer activement à la sélection des morceaux à écouter en temps réel. L’objectif principal de l’application est de rendre la création de playlists plus dynamique et collective.
 
-                Le but de cet exercice était de reproduire fidèlement une maquette fournie par le site, représentant la vitrine en ligne d'une marque de création de meubles. Une fois le projet terminé, la solution pouvait être partagée avec d'autres membres de la plateforme pour obtenir des retours sur la qualité de la réalisation.</p>
+                <br> <br>Le fonctionnement de l’application est simple et accessible à tous : les utilisateurs se connectent à une session en ligne à l’aide d’un code d’accès unique. Une fois connectés, ils peuvent proposer des titres, voter pour leurs morceaux préférés, et voir immédiatement les chansons ajoutées à la playlist. Cette interaction en temps réel crée une ambiance de partage et de découverte musicale, où chaque participant peut exprimer ses goûts tout en contribuant à l’expérience musicale globale.
+                
+                <br> <br>En parallèle de l’application, le chef de projet a souhaité développer un site vitrine pour mieux promouvoir BetterDJ et ses nombreux avantages. Ce site vise à attirer de nouveaux utilisateurs, en mettant en avant la simplicité d’utilisation de l’application, son caractère innovant et son aspect communautaire.
+
+            </p>
         </div>
         <div class="roleinproject">
             <h2>MON <span>RÔLE</span> DANS LE PROJET</h2>
-            <p>Ce projet, réalisé en 2023, a été l'un de mes premiers exercices lors de mon apprentissage de React. L'objectif principal était d'améliorer mes compétences en développement front-end. Il s'agit d'un exercice proposé par le site web Frontend Mentor, qui offre une variété d'exercices avec des niveaux de difficulté et des thématiques diversifiés.
-
-                Le but de cet exercice était de reproduire fidèlement une maquette fournie par le site, représentant la vitrine en ligne d'une marque de création de meubles. Une fois le projet terminé, la solution pouvait être partagée avec d'autres membres de la plateforme pour obtenir des retours sur la qualité de la réalisation.</p>
+            <p>Dans le cadre du projet BetterDJ, mon rôle a consisté principalement à travailler sur la création du site vitrine avec un camarade. Nous avons conçu un site destiné à promouvoir les fonctionnalités et les avantages de l'application. Ce site vitrine présente l'application de manière attrayante, en mettant en avant son concept de playlists collaboratives et l'expérience interactive qu'elle propose aux utilisateurs.
+                <br> <br>En complément, j'ai réalisé des maquettes du site, qui ont permis de visualiser l'interface avant le développement final. Mon implication a donc été axée sur le design et la mise en œuvre du site, tout en collaborant avec mon camarade pour assurer une expérience utilisateur fluide et efficace.</p>
         </div>
         <div class="learninproject">
             <h2>CE QUE J'AI <span>APPRIS</span> </h2>
-            <p>Ce projet, réalisé en 2023, a été l'un de mes premiers exercices lors de mon apprentissage de React. L'objectif principal était d'améliorer mes compétences en développement front-end. Il s'agit d'un exercice proposé par le site web Frontend Mentor, qui offre une variété d'exercices avec des niveaux de difficulté et des thématiques diversifiés.
-
-                Le but de cet exercice était de reproduire fidèlement une maquette fournie par le site, représentant la vitrine en ligne d'une marque de création de meubles. Une fois le projet terminé, la solution pouvait être partagée avec d'autres membres de la plateforme pour obtenir des retours sur la qualité de la réalisation.</p>
+            <p>Pour ce projet, j'ai appris à utiliser Angular, un framework que je ne connaissais pas avant. Grâce à Angular, j'ai pu créer une interface utilisateur réactive et dynamique pour le site vitrine. En travaillant sur cette page unique, j'ai appris à organiser le contenu de manière fluide tout en optimisant l'expérience utilisateur.
+                <br> <br> Ce projet m'a permis de mieux comprendre la structure d'une application web avec Angular, ainsi que l'intégration de divers éléments interactifs pour rendre l'interface plus engageante</p>
         </div>
     </section>
     <footer>
