--- a/main.html
+++ b/main.html
@@ -32,7 +32,8 @@
                 <a href="https://www.instagram.com/noe_lechat/" style="--i:8"><i class='bx bxl-instagram' ></i></a>
             </div>
         </div>
-        <img src="./images/logoNL.png" alt="logo">
+        <div class="latest-project">
+        </div>
     </section>
     <article id="about"></article>
     <section class="about"">
@@ -178,6 +179,14 @@
                         <a href="betterDJ.html"><i class="bx bx-plus-circle"></i></a>
                     </div>
                 </div>
+                <div class="row">
+                    <img src="./images/better_dj.png" alt="better-dj">
+                    <div class="layer">
+                        <h5>Portfolio</h5>
+                        <p>Création de mon portfolio</p>
+                        <a href="betterDJ.html"><i class="bx bx-plus-circle"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -211,7 +220,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2023 Mon Portfolio. Tous droits réservés.</p>
+        <p>&copy; 2024 Noé LECHAT. Tous droits réservés.</p>
     </footer>
     <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
     <div id="alert-container"></div>
