try to discard dezoom

--- a/main.html
+++ b/main.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <header class="header">
-        <a href="#home" class="logo">Portfolio</a>
         <nav class="navbar">
             <a href="#home" id="nav-home" style="--i:1" class="active">Accueil</a>
             <a href="#about" id="nav-about" style="--i:2">A propos</a>
@@ -19,10 +18,11 @@
             <a href="#portfolio" id="nav-portfolio" style="--i:4">Projets</a>
             <a href="#contact" id="nav-contact" style="--i:5">Contact</a>
         </nav>
+        <a href="#home" class="logo">Portfolio</a>
     </header>
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Bonjour, je m'appelles</h3>
+            <h3>Bonjour, je m'appelle</h3>
             <h1>Noé LECHAT</h1>
             <br>
             <p>Etudiant en informatique spécialisé dans le dévelopemment web</p>
