try to discard dezoom

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Bonjour, je m'appelles</h3>
+            <h3>Bonjour, je m'appelless</h3>
             <h1>Noé LECHAT</h1>
             <br>
             <p>Etudiant en informatique spécialisé dans le dévelopemment web</p>
