--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Bonjour, je m'appelless</h3>
+            <h3>Bonjour, je m'appelle</h3>
             <h1>Noé LECHAT</h1>
             <br>
             <p>Etudiant en informatique spécialisé dans le dévelopemment web</p>
@@ -33,6 +33,15 @@
             </div>
         </div>
         <div class="latest-project">
+            <h2>Dernier <span>projet</span></h2>
+            <div class="row">
+                    <img src="./images/forum.png" alt="forum">
+                    <div class="layer">
+                        <h5>Forum</h5>
+                        <p>Forum de discussion en ligne</p>
+                        <a href="forum.html"><i class="bx bx-plus-circle"></i></a>
+                    </div>
+            </div>
         </div>
     </section>
     <article id="about"></article>
@@ -44,7 +53,7 @@
             <h2>A propos de <span>moi</span> </h2>
             <h4>Recherche un stage en dévelopemment web</h4>
             <p>Je suis un étudiant en informatique spécialisé dans le développement web. J'ai commencé à apprendre le développement web il y a 2 ans et j'ai acquis de l'expérience dans ce domaine. J'ai travaillé sur plusieurs projets personnels et j'ai également travaillé en tant que développeur web pour une entreprise. J'ai de bonnes compétences en HTML, CSS, JavaScript, React et Node.js. Je suis également passionné par le développement web et j'aime apprendre de nouvelles technologies.</p>
-            <a href="./docs/CV_2024-11-12_Noé_LECHAT.pdf" class="btn" target="_blank"">Télécharger CV</a>
+            <a href="./docs/CV_2024-11-12_Noé_LECHAT.pdf" class="btn" download="./docs/CV_2024-11-12_Noé_LECHAT.pdf">Télécharger CV</a>
         </div>
     </section>
     <section class="skills" id="skills">
