add text for forum page

--- a/forum.html
+++ b/forum.html
@@ -43,21 +43,24 @@
     <section class="project-presentation">
         <div class="project-target">
             <h2><span>OBJECTIFS</span> DU PROJET</h2>
-            <p>Ce projet, réalisé en 2023, a été l'un de mes premiers exercices lors de mon apprentissage de React. L'objectif principal était d'améliorer mes compétences en développement front-end. Il s'agit d'un exercice proposé par le site web Frontend Mentor, qui offre une variété d'exercices avec des niveaux de difficulté et des thématiques diversifiés.
+            <p>L’objectif de ce projet était de concevoir et de développer un forum en ligne fonctionnel, permettant aux utilisateurs d’échanger sur divers sujets. Ce projet visait à mettre en pratique les connaissances acquises en première année de bachelor en informatique, tout en renforçant des compétences clés en développement web.
 
-                Le but de cet exercice était de reproduire fidèlement une maquette fournie par le site, représentant la vitrine en ligne d'une marque de création de meubles. Une fois le projet terminé, la solution pouvait être partagée avec d'autres membres de la plateforme pour obtenir des retours sur la qualité de la réalisation.</p>
+                 <br> <br>Il fallait donc  créer une plateforme interactive où les utilisateurs pouvaient
+                
+                créer un compte personnel pour accéder aux fonctionnalités,
+                publier des messages et répondre aux publications des autres ou encore
+                interagir avec les contenus via un système de likes et dislikes.
+                <br> <br>En réalisant ce projet, l’objectif était également de développer des compétences techniques dans la gestion des bases de données, l’authentification des utilisateurs, et la mise en œuvre d’une interface intuitive pour favoriser l’engagement des utilisateurs.</p>
         </div>
         <div class="roleinproject">
             <h2>MON <span>RÔLE</span> DANS LE PROJET</h2>
-            <p>Ce projet, réalisé en 2023, a été l'un de mes premiers exercices lors de mon apprentissage de React. L'objectif principal était d'améliorer mes compétences en développement front-end. Il s'agit d'un exercice proposé par le site web Frontend Mentor, qui offre une variété d'exercices avec des niveaux de difficulté et des thématiques diversifiés.
-
-                Le but de cet exercice était de reproduire fidèlement une maquette fournie par le site, représentant la vitrine en ligne d'une marque de création de meubles. Une fois le projet terminé, la solution pouvait être partagée avec d'autres membres de la plateforme pour obtenir des retours sur la qualité de la réalisation.</p>
+            <p>Dans ce projet, j’ai pris en charge la partie back-end, où j’ai assuré la gestion des publications ainsi que la mise en place du système de likes et dislikes. J’ai également développé des filtres permettant aux utilisateurs de trier les posts par catégories et de naviguer facilement. 
+                <br> <br>De plus, j’ai créé une page dédiée pour consulter uniquement ses propres posts ou ceux que l’on avait likés. Pour rendre l’expérience encore plus dynamique, j’ai utilisé les WebSockets, une technologie nouvelle pour moi, afin de gérer le système de like. Ce projet m’a offert une excellente opportunité de relever des défis techniques tout en enrichissant mes compétences</p>
         </div>
         <div class="learninproject">
             <h2>CE QUE J'AI <span>APPRIS</span> </h2>
-            <p>Ce projet, réalisé en 2023, a été l'un de mes premiers exercices lors de mon apprentissage de React. L'objectif principal était d'améliorer mes compétences en développement front-end. Il s'agit d'un exercice proposé par le site web Frontend Mentor, qui offre une variété d'exercices avec des niveaux de difficulté et des thématiques diversifiés.
-
-                Le but de cet exercice était de reproduire fidèlement une maquette fournie par le site, représentant la vitrine en ligne d'une marque de création de meubles. Une fois le projet terminé, la solution pouvait être partagée avec d'autres membres de la plateforme pour obtenir des retours sur la qualité de la réalisation.</p>
+            <p>Ce projet m’a permis de développer des compétences solides en back-end, notamment dans la gestion des publications et des interactions utilisateur. En découvrant et en utilisant les WebSockets, j’ai appris à intégrer des fonctionnalités de communication en temps réel, un aspect technique nouveau pour moi. 
+                <br> <br>J’ai également acquis une meilleure maîtrise de la gestion des données, en concevant des filtres avancés pour trier les publications par catégories ou afficher des vues personnalisées, comme les posts propres à un utilisateur ou ceux qu’il a aimés. Ce projet m’a aidé à renforcer ma capacité à résoudre des problématiques complexes et à améliorer l’expérience utilisateur grâce à des solutions dynamiques et efficaces</p>
         </div>
     </section>
     <footer>
