--- a/main.html
+++ b/main.html
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="./images/better_dj.png" alt="better-dj">
+                    <img src="./images/portfolio.png" alt="better-dj">
                     <div class="layer">
                         <h5>Portfolio</h5>
                         <p>Création de mon portfolio</p>
