--- a/betterDJ.html
+++ b/betterDJ.html
@@ -10,7 +10,7 @@
 <body>
     <section class="project-details" id="project-details">
         <div class="project-exit">
-            <a class="go-back" href="main.html#portfolio">
+            <a class="go-back" href="main.html">
             <img src="./images/arrow.svg" alt="fleche gauche">
             <p>Retour aux projets</p>
         </a> 
@@ -64,5 +64,6 @@
         <p>&copy; 2023 Mon Portfolio. Tous droits réservés.</p>
     </footer>
     <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
+    <script src="projects.js"></script>
 </body>
 </html>
